All: report log file name in page title

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>ArduPilot Hardware Checker</title>
+<title>ArduPilot Hardware Report</title>
 <link rel="icon" href="../images/AP_favicon.png">
 <script type="text/javascript" src="HardwareReport.js"></script>
 <script type="text/javascript" src="../Libraries/DecodeDevID.js"></script>
