--- a/PIDReview/index.html
+++ b/PIDReview/index.html
@@ -270,6 +270,9 @@
               'Line Number: '+ linenumber)
         return false
     }
+    window.addEventListener('unhandledrejection', function (e) {
+        throw new Error(e.reason.stack)
+    })
 
     setup_plots()
     reset()
