--- a/StreamStats/index.html
+++ b/StreamStats/index.html
@@ -107,6 +107,9 @@
             'Line Number: '+ linenumber)
       return false
   }
+  window.addEventListener('unhandledrejection', function (e) {
+    throw new Error(e.reason.stack)
+  })
 
   // Load tool tips
   tippy('#TT')
