--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -650,6 +650,9 @@ These params can then be saved and loaded into the autopilot without the need fo
               'Line Number: '+ linenumber)
         return false
     }
+    window.addEventListener('unhandledrejection', function (e) {
+        throw new Error(e.reason.stack)
+    })
 
     // Load tool tips
     tippy('#TT')
