--- a/KinematicTool/index.html
+++ b/KinematicTool/index.html
@@ -201,6 +201,9 @@
             'Line Number: '+ linenumber)
       return false
   }
+  window.addEventListener('unhandledrejection', function (e) {
+    throw new Error(e.reason.stack)
+  })
 
   // Load tool tips
   tippy('#TT')
