All: move to use local modules

--- a/LogFinder/index.html
+++ b/LogFinder/index.html
@@ -10,12 +10,12 @@
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 <script type="text/javascript" src="../Libraries/Param_Helpers.js"></script>
 
-<link href="https://unpkg.com/tabulator-tables@6.2.0/dist/css/tabulator.min.css" rel="stylesheet">
-<script src="https://unpkg.com/luxon@3.4.4/build/global/luxon.min.js"></script>
-<script src="https://unpkg.com/tabulator-tables@6.2.0/dist/js/tabulator.min.js"></script>
+<link href="../modules/tabulator/dist/css/tabulator.min.css" rel="stylesheet">
+<script src="../modules/build/luxon/build/global/luxon.min.js"></script>
+<script src="../modules/tabulator/dist/js/tabulator.min.js"></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../modules/build/floating-ui/dist/umd/popper.min.js"></script>
+<script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
