--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -4,12 +4,12 @@
 <meta charset="utf-8" />
 <title>ArduPilot MAGFit</title>
 <link rel="icon" href="../images/AP_favicon.png">
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
+<script src='../modules/plotly.js/dist/plotly.min.js'></script>
 
-<script src='https://cdn.jsdelivr.net/npm/ml-matrix@6.10.5/matrix.umd.min.js'></script>
+<script src='../modules/build/matrix/matrix.umd.js'></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../modules/build/floating-ui/dist/umd/popper.min.js"></script>
+<script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
 <script type="text/javascript" src="wmm.js"></script>
 <script type="text/javascript" src="quaternion.js"></script>
