--- a/StreamStats/index.html
+++ b/StreamStats/index.html
@@ -12,10 +12,10 @@
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
 <script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
 
-<script src='https://cdn.plot.ly/plotly-2.29.1.min.js'></script>
+<script src='../modules/plotly.js/dist/plotly.min.js'></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../modules/build/floating-ui/dist/umd/popper.min.js"></script>
+<script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
