--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8" />
 <title>ArduPilot Filter Review</title>
 <link rel="icon" href="../images/AP_favicon.png">
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
-<script src="https://unpkg.com/browser-cjs/require.min.js"></script>
+<script src='../modules/plotly.js/dist/plotly.min.js'></script>
+<script src='../modules/fft.js/dist/fft.js'></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../modules/build/floating-ui/dist/umd/popper.min.js"></script>
+<script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
 <script type="text/javascript" src="FilterReview.js"></script>
 <script type="text/javascript" src="../Libraries/DecodeDevID.js"></script>
