--- a/PIDReview/index.html
+++ b/PIDReview/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <title>ArduPilot PID Review</title>
 <link rel="icon" href="../images/AP_favicon.png">
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
-<script src="https://unpkg.com/browser-cjs/require.min.js"></script>
+<script src='../modules/plotly.js/dist/plotly.min.js'></script>
+<script src='../modules/fft.js/dist/fft.js'></script>
 <script type="text/javascript" src="PIDReview.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/fft.js"></script>
@@ -13,8 +13,8 @@
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
 <script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../modules/build/floating-ui/dist/umd/popper.min.js"></script>
+<script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
