Promote log finder to from dev to the main page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
+      <a href="../LogFinder" style="margin: 20px; display: inline-block;"><img src="../images/LogFinder_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Log Finder</h2>
+      A tool load and sort directories of logs. Note that directory read is not supported by all browsers. Logs are sorted by the unique hardware ID of the flight controller. Parameter changes are tracked between logs.
+      Open in links allow files to be easily opened in any of the other tools.
+    </td>
+  </tr>
+
+  <tr>
+    <td>
       <a href="https://plot.ardupilot.org/#/" style="margin: 20px; display: inline-block;"><img src="images/UAVLogViewer_Icon.gif" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
