Hardwarereport: add UART and DroneCAN data rate plots

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -262,6 +262,9 @@
   <div id="performance_time" style="width:800px;height:400px"></div>
 </div>
 
+<h3 hidden>Data Rates</h3>
+<p id="DataRates"></p>
+
 <h3 id="Stack" hidden>Stack</h3>
 <div hidden>
   <h4>Free memory</h4>
