--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="../LogFinder" style="margin: 20px; display: inline-block;"><img src="../images/LogFinder_Icon.png" style="width:200px"></a>
+      <a href="./LogFinder" style="margin: 20px; display: inline-block;"><img src="images/LogFinder_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>Log Finder</h2>
