--- a/Dev/index.html
+++ b/Dev/index.html
@@ -43,6 +43,16 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="../GeofenceGenerator" style="margin: 20px; display: inline-block;"><img src="../images/GeofenceGenerator_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Geofence Generator</h2>
+      Generates ArduPilot geofences from Open Street Map waterway data.
+    </td>
+  </tr>
+
 </table>
 
 </body>
