--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -644,7 +644,7 @@ These params can then be saved and loaded into the autopilot without the need fo
         alert('Sorry, something went wrong.\n\n' + 
               'Please try a hard reload of this page to clear its cache.\n\n' +
               'If the error persists open an issue on the GitHub repo.\n' +
-              'Include a copy of the log and the following error message:\n\n' +
+              'Include following error message:\n\n' +
                msg + '\n' +
               'URL: '+ url +'\n' +
               'Line Number: '+ linenumber)
