GeofenceGenerator: show crop, add search and tool tips

--- a/GeofenceGenerator/index.html
+++ b/GeofenceGenerator/index.html
@@ -11,6 +11,11 @@
     <script src="https://unpkg.com/leaflet-editable@1.2.0/src/Leaflet.Editable.js"></script>
     <script src="https://unpkg.com/@bagage/leaflet.restoreview@1.0.1/leaflet.restoreview.js"></script>
     <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
+    <script src="../modules/build/floating-ui/dist/umd/popper.min.js"></script>
+    <script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
     <script type="text/javascript" src="GeofenceGenerator.js"></script>
     <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
@@ -40,6 +45,23 @@
             padding: 10px;
         }
 
+        .tippy-box {
+            font-size: 20px;
+        }
+
+        .leaflet-custom {
+            position: absolute;
+            z-index: 1000;
+            pointer-events: none;
+            top: 130px;
+            left: 5px;
+            padding-top: 10px;
+        }
+        
+        .leaflet-custom .leaflet-control {
+            margin-bottom: 10px;
+        }
+
     </style>
 </head>
 
@@ -52,9 +74,10 @@
             <h1 style="margin-top:0px;margin-bottom:5px">Geofence Generator</h1>
             Fences generated using <a href="https://www.openstreetmap.org/">OpenStreetMap</a> <a href="https://wiki.openstreetmap.org/wiki/Overpass_API">Overpass API</a>.
             <br><br>
-            <input id="search" type="button" value="Search" onclick="loading_call(request)" disabled>
+            <div id="searchdiv" style="display:inline-block"><input id="search" type="button" value="Search" onclick="loading_call(request)" disabled></div>
             <input id="crop" type="button" value="Crop" onclick="add_crop()" disabled>
-            <br>
+            <div style="display:inline-block; width:220px"></div>
+            <img id="QC" src="../images/question-circle.svg" style="width:20px; vertical-align:middle;">
         </td>
         <td>
             <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
@@ -64,7 +87,6 @@
     </div>
     <div id="mapid" style="position: absolute;height: 100%;"></div>
 </body>
-<br />
 <script>
 
     window.onerror = function(msg, url, linenumber) {
@@ -86,26 +108,72 @@
         zoomControl: false // Disable default zoom control
     })
 
+    // Add custom location for zoom controls
+    map._controlCorners["custom"] = L.DomUtil.create('div', "leaflet-custom", map._controlContainer)
+
+    // Add zoom control in custom location
+    L.control.zoom({
+        position: 'custom'
+    }).addTo(map)
+
     // Get the users last location, else pick a default
     if (!map.restoreView()) {
         map.setView([51.505, -0.09], 5)
     }
     map_zoom()
 
-    // Add zoom control in bottom right
-    L.control.zoom({
-        position: 'bottomright'
-    }).addTo(map);
-
     L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map)
 
+    // Add search box
+    const geocoder = L.Control.geocoder({
+        defaultMarkGeocode: false,
+        position: "custom"
+    })
+    geocoder.addTo(map)
+    geocoder.on('markgeocode', function(e) {
+        map.fitBounds(e.geocode.bbox);
+    })
+
+    // Add zoom and crop events
     map.on('zoomend', map_zoom)
+
+    map.on('editable:vertex:dragend', function (event) {
+        apply_crop()
+    })
 
     init_loading_overlay()
 
     // Bump up the loading Z index so it show on top of the map
     document.getElementById("loading").style.zIndex = 2001
+
+    // Add tool tip to search button
+    const search = document.getElementById("search")
+    tippy(document.getElementById("searchdiv"), {
+        onShow: (instance) => {
+            const search = document.getElementById("search")
+            let text
+            if (search.disabled) {
+                text = "Zoom in to enable search"
+            } else {
+                text = "Search the current area"
+            }
+            instance.setContent(text)
+            return true
+        },
+    })
+
+    // tool tip for crop button
+    tippy(document.getElementById("crop"), {
+        content: "Add cropping polygon"
+    })
+
+    // tool tip for question circle icon
+    tippy(document.getElementById("QC"), {
+        content: "Locate the area you want to generate a fence for. Once zoomed in sufficiently you can search for features using the search button. " + 
+        "Features will be loaded on to the map. Click the feature and then the download popup to generate the fence. " +
+        "Crop button adds a cropping polygon allowing smaller sections to be downloaded"
+    })
 
 </script>
