Dev: add RotationCheck

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -53,6 +53,16 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="../RotationCheck" style="margin: 20px; display: inline-block;"><img src="../images/RotationCheck_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Rotation Check</h2>
+      A tool to help understand of rotations.
+    </td>
+  </tr>
+
 </table>
 
 </body>
