--- a/RotationCheck/index.html
+++ b/RotationCheck/index.html
@@ -10,9 +10,6 @@
 
 <script src='../modules/plotly.js/dist/plotly.min.js'></script>
 
-<script src="../modules/build/floating-ui/dist/umd/popper.min.js"></script>
-<script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
-
 </head>
 <table style="width:1200px"><tr><td>
   <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
@@ -51,8 +48,8 @@
   <input id="EulerYaw" name="EulerYaw" type="number" onchange="update()" style="width:50px" disabled/>
 </p>
 
-<div style="width:1200px;height:1200px;margin:auto">
-<div id="plot" style="width:1000px;height:1000px"></div>
+<div style="width:1200px;">
+<div id="plot" style="width:1000px;height:800px;padding-left:50px;"></div>
 </div>
 
 <script>
