SysID: transfer function fit (single iteration) working

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -62,6 +62,18 @@ The tools on this page are either developer focused, or a work in progress, they
       A tool to help understand of rotations.
     </td>
   </tr>
+  
+  <tr>
+    <td>
+      <a href="./SysID" style="margin: 20px; display: inline-block;">
+        <img src="" style="width:200px; height:200px; background-color: #f0f0f0;">
+      </a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>SysID</h2>
+      System Identification tool description goes here...
+    </td>
+  </tr>  
 
 </table>
 
