--- a/SysID/index.html
+++ b/SysID/index.html
@@ -10,7 +10,70 @@
       <textarea id="output" style="width: 100%; height: 500px;" rows="10" disabled></textarea>
     </div>
 
-    <input type="file" id="input_data" disabled>
+    <div>
+      <form id="customForm">
+        <input type="checkbox" id="tf_checkbox" name="customCheckbox">
+        <label for="transfer function">Transfer function</label><br><br>
+
+        <input type="checkbox" id="ss_checkbox" name="customCheckbox">
+        <label for="state space">State Space</label><br><br>
+      </form>
+    </div>
+
+    <!-- FOR TRANSFER FUNCTION -->
+    <div id="tf_form" style="display:none;">
+      <!-- <label for="No. of Poles">Poles:</label>                  
+      <input type="number" id="Poles" name="Poles">
+
+      <label for="No. of Zeros">Zeros:</label>
+      <input type="number" id="Zeros" name="Zeros"> -->
+
+      <label for="Input">Input Name:</label>
+      <input type="text" id="input_name" name="input_name"><br><br>
+
+      <label for="Input">Input Field:</label>
+      <input type="text" id="input_field" name="input_field"><br><br>
+
+      <label for="Output">Output Field:</label>
+      <input type="text" id="output_name" name="output_name"><br><br>
+
+      <label for="Output">Output:</label>
+      <input type="text" id="output_field" name="output_field"><br><br>
+
+      <label for="customNumerator">Numerator:</label>
+      <input type="text" id="customNumerator" name="customNumerator"><br><br>
+
+      <label for="customDenominator">Denominator:</label>
+      <input type="text" id="customDenominator" name="customDenominator"><br><br>
+
+      <label for="tf_params">Symbolic params:</label>
+      <input type="text" id="tf_params" name="tf_params"><br><br>
+
+      <label for="file">Log File:</label>
+      <input type="file" id="fileInput" name="file">
+      <button id="parseButton" type="button">Submit</button>
+    </div>
+
+    <!-- FOR STATE SPACE MODEL -->
+    <div id="ss_form" style="display:none;">
+      <label for="No. of Inputs">Inputs:</label>                  
+      <input type="number" id="num_Inputs" name="Inputs">
+      <input type="submit">
+
+      <label for="No. of Outputs">Outputs:</label>
+      <input type="number" id="num_Outputs" name="Outputs">
+      <input type="submit">
+
+      <label for="A">Matrix: A:</label>
+      <input type="text" id="A" name="MatrixA"><br><br>
+
+      <label for="B">Matrix: B:</label>
+      <input type="text" id="B" name="MatrixB"><br><br>
+
+      <label for="file">Log File:</label>
+      <input type="file" id="fileInput" name="file">
+      <button id="parseButton" type="button">Submit</button>
+    </div>
 
     <script type="text/javascript">
       async function main() {
@@ -18,6 +81,12 @@
 
         function addToOutput(message) {
           output.value += message + "\n";
+        }
+
+        function getFieldData(log_data, field_name) {
+          const parser = new DataflashParser();
+          parser.processData(log_data);
+          return parser.get(field_name);
         }
 
         addToOutput("Initializing Pyodide...");
@@ -30,17 +99,24 @@
         addToOutput("Installing matplotlib package...");
         await micropip.install("matplotlib");
 
-        // Strictly control wants matplotlib > 3.6. We don't have this, but setting deps=false means we don't fail.
         addToOutput("Installing control package...");
         await micropip.install("control", keep_going=true, deps=false);
 
         const packageUrl = "../modules/pyAircraftIden/pyAircraftIden-1.0-py3-none-any.whl";
+        
         addToOutput(`Installing pyAircraftIden package from ${packageUrl}...`);
         try {
-          await micropip.install(packageUrl, keep_going=true);
+          await micropip.install(packageUrl, { keep_going: true });
           addToOutput("pyAircraftIden package installed successfully.");
         } catch (error) {
           addToOutput(`Failed to install pyAircraftIden package: ${error}`);
+        }
+
+        try {
+          const import_done = import('../modules/JsDataflashParser/parser.js').then((mod) => { DataflashParser = mod.default });
+          addToOutput("Parser package installed successfully.");
+        } catch (error) {
+          addToOutput(`Failed to install parser: ${error}`);
         }
 
         // Define a custom Python function to capture print statements
@@ -59,20 +135,89 @@
                   pass
 
           sys.stdout = JsOutput()
-          sys.stderr = JsOutput()`
-        );
+          sys.stderr = JsOutput()
+        `);
 
-        // Load test file
-        const script = await fetch("./Tests/x8SSM_yaw.py")
-        const script_text = await script.text();
-        await pyodide.runPython(script_text)
+        document.getElementById('parseButton').addEventListener('click', async () => {
+          const fileInput = document.getElementById('fileInput');
+          const inputname = document.getElementById('input_name').value.trim();
+          const inputField = document.getElementById('input_field').value.trim();
+          const outputname = document.getElementById('output_name').value.trim();
+          const outputField = document.getElementById('output_field').value.trim();
+          const Numerator = document.getElementById('customNumerator').value.trim();
+          const Denominator = document.getElementById('customDenominator').value.trim();
+          const symbolic_var = document.getElementById('tf_params').value.trim();
+          const output = document.getElementById('output');
 
-        // Call setup function
-        await pyodide.runPython('js_setup()')
+          if (fileInput.files.length === 0) {
+            alert('Please select a log file');
+            return;
+          }
 
-        // Enable file button
-        document.getElementById("input_data").disabled = false
+          if (!inputField || !outputField) {
+            alert('Please enter input and output fields');
+            return;
+          }
 
+          const file = fileInput.files[0];
+          const reader = new FileReader();
+          reader.onload = async function (event) {
+          const logData = event.target.result;
+
+          const parser = new DataflashParser();
+          parser.processData(logData);
+          const timeData = parser.get(inputname,"TimeUS");            
+          const fieldData1 = parser.get(inputname,inputField);
+          const fieldData2 = parser.get(outputname,outputField);
+
+          await pyodide.globals.set("input_data", fieldData1);
+          await pyodide.globals.set("output_data", fieldData2);
+          await pyodide.globals.set("time_data", timeData);
+          await pyodide.globals.set("input_field",inputField);
+          await pyodide.globals.set("output_field",outputField);
+          await pyodide.globals.set("numerator", Numerator);
+          await pyodide.globals.set("denominator", Denominator);
+          await pyodide.globals.set("symbols",symbolic_var);
+          await pyodide.runPython(`
+            import numpy as np
+            from AircraftIden import FreqIdenSIMO, TransferFunctionFit
+            import math
+            import sympy as sp
+            from AircraftIden import FreqIdenSIMO, TransferFunctionFit, TransferFunctionParamModel
+            from AircraftIden.TransferFunctionFit import plot_fitter
+            import matplotlib
+            plt = matplotlib.pyplot
+
+            matplotlib.use("module://matplotlib_pyodide.html5_canvas_backend")
+
+            time_seq_source = np.array(time_data)/1000000
+            yout_source = np.array(input_data)
+            gz_source = np.array(output_data)
+            gz_source = gz_source*math.pi / 180
+            simo_iden = FreqIdenSIMO(time_seq_source,1, 15, yout_source, gz_source, win_num=None)
+
+            plt.rc("figure", figsize=(15,10))
+            plt.figure("pout->udot")
+            simo_iden.plt_bode_plot(0)
+
+            s = sp.symbols("s")
+            tau = sp.symbols("tau")
+            
+            freq, H, gamma2, gxx, gxy, gyy = simo_iden.get_freq_iden(0)
+
+            tf_params = sp.symbols(str(symbols))
+            num = sp.simplify(str(numerator))
+            den = sp.simplify(str(denominator))
+            tfpm = TransferFunctionParamModel(num, den, tau)
+            fitter = TransferFunctionFit(freq, H, gamma2, tfpm, nw=20, iter_times=1, reg = 0.1)
+            tf = fitter.estimate(2, 20, accept_J=50)
+            plot_fitter(fitter,str(input_field)+"->"+str(output_field))
+            plt.show()
+
+          `);
+        };
+          reader.readAsArrayBuffer(file);
+        });
       }
 
       main().catch((error) => {
@@ -80,6 +225,31 @@
         const output = document.getElementById("output");
         output.value += '\nError during execution:\n' + error;
       });
+
+      document.getElementById("tf_checkbox").addEventListener("change", function () {
+        if (this.checked) {
+          document.getElementById("ss_checkbox").checked = false;
+          document.getElementById("tf_form").style.display = "block";
+          document.getElementById("ss_form").style.display = "none";
+        } else {
+          document.getElementById("tf_form").style.display = "none";
+        }
+      });
+
+      document.getElementById("ss_checkbox").addEventListener("change", function () {
+        if (this.checked) {
+          document.getElementById("tf_checkbox").checked = false;
+          document.getElementById("ss_form").style.display = "block";
+          document.getElementById("tf_form").style.display = "none";
+        } else {
+          document.getElementById("ss_form").style.display = "none";
+        }
+      });
+
+      function addToOutput(message) {
+        const output = document.getElementById("output");
+        output.value += message + "\n";
+      }
     </script>
   </body>
 </html>
