HardwareReport: use new version helper

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
 <script type="text/javascript" src="../Libraries/Param_Helpers.js"></script>
+<script type="text/javascript" src="../Libraries/LogHelpers.js"></script>
 
 <script src='../modules/plotly.js/dist/plotly.min.js'></script>
 
