LogFinder: use new version helper

--- a/LogFinder/index.html
+++ b/LogFinder/index.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 <script type="text/javascript" src="../Libraries/Param_Helpers.js"></script>
+<script type="text/javascript" src="../Libraries/LogHelpers.js"></script>
 
 <link href="../modules/tabulator/dist/css/tabulator.min.css" rel="stylesheet">
 <script src="../modules/build/luxon/build/global/luxon.min.js"></script>
