SysID: added time_stamp

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -65,7 +65,7 @@ The tools on this page are either developer focused, or a work in progress, they
   
   <tr>
     <td>
-      <a href="./SysID" style="margin: 20px; display: inline-block;">
+      <a href="../SysID" style="margin: 20px; display: inline-block;">
         <img src="" style="width:200px; height:200px; background-color: #f0f0f0;">
       </a>
     </td>
