--- a/SysID/index.html
+++ b/SysID/index.html
@@ -166,7 +166,7 @@
         addToOutput("Installing control package...");
         await micropip.install("control", keep_going=true, deps=false);
 
-        const packageUrl = "../modules/pyAircraftIden/gi.whl";
+        const packageUrl = "../modules/pyAircraftIden/pyAircraftIden-1.0-py3-none-any.whl";
         
         addToOutput(`Installing pyAircraftIden package from ${packageUrl}...`);
         try {
