SysID: changes in field names

--- a/SysID/index.html
+++ b/SysID/index.html
@@ -29,16 +29,16 @@
       <label for="No. of Zeros">Zeros:</label>
       <input type="number" id="Zeros" name="Zeros"> -->
 
-      <label for="Input">Input Name:</label>
+      <label for="Input">Input Msg:</label>
       <input type="text" id="input_name" name="input_name"><br><br>
 
       <label for="Input">Input Field:</label>
       <input type="text" id="input_field" name="input_field"><br><br>
 
-      <label for="Output">Output Field:</label>
+      <label for="Output">Output Msg:</label>
       <input type="text" id="output_name" name="output_name"><br><br>
 
-      <label for="Output">Output:</label>
+      <label for="Output">Output Field:</label>
       <input type="text" id="output_field" name="output_field"><br><br>
 
       <label for="start time">Start time (s):</label>
@@ -47,10 +47,10 @@
       <label for="end time">End time (s):</label>
       <input type="number" id="endtime" name="endtime"><br><br>
 
-      <label for="start frequency">Start frequency (hz):</label>
+      <label for="start frequency">Start frequency (rad/sec):</label>
       <input type="number" id="startfreq" name="startfreq"><br><br>
 
-      <label for="end frequency">End frequency (hz):</label>
+      <label for="end frequency">End frequency (rad/sec):</label>
       <input type="number" id="endfreq" name="endfreq"><br><br>
 
 
