--- a/Dev/index.html
+++ b/Dev/index.html
@@ -65,13 +65,11 @@ The tools on this page are either developer focused, or a work in progress, they
   
   <tr>
     <td>
-      <a href="../SysID" style="margin: 20px; display: inline-block;">
-        <img src="" style="width:200px; height:200px; background-color: #f0f0f0;">
-      </a>
+      <a href="../SysID" style="margin: 20px; display: inline-block;"><img src="../images/sysid_python_stateSpace.png" style="width:200px; height:200px; background-color: #f0f0f0;"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>SysID</h2>
-      System Identification tool description goes here...
+      A tool for identifying state-space or transfer function models for UAV dynamics
     </td>
   </tr>  
 
